Add new endpoint for creating tasks
